packages/cjs-to-esm/test/snapshots/package-corpus/core-js/full/error/constructor.js
import parent from "../../actual/error/constructor";
const _cjs_default = parent;
export default _cjs_default;
